# thrive-video-suite

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  build.bat  build_log.txt  gen_sounds.py  mkwav.py  setup_dev_env.ps1
cmake/: FindMLT.cmake
resources/: generate_placeholder_sounds.py  thrive.qrc
src/accessibility/: CMakeLists.txt  accessibletimeline.cpp  accessibletimeline.h  announcer.cpp  announcer.h  audiocuemanager.cpp  audiocuemanager.h  screenreader.cpp  screenreader.h
src/app/: CMakeLists.txt  constants.h  main.cpp  mainwindow.cpp  mainwindow.h  shortcutmanager.cpp  shortcutmanager.h  welcomewizard.cpp  welcomewizard.h
src/core/: CMakeLists.txt  clip.cpp  clip.h  commands.cpp  commands.h  effect.cpp  effect.h  marker.cpp  marker.h  project.cpp  project.h  projectserializer.cpp  projectserializer.h  stackregistry.cpp  stackregistry.h  stacktemplate.cpp  stacktemplate.h  timecode.cpp  timecode.h  timeline.cpp  timeline.h  track.cpp  track.h  transition.cpp  transition.h
src/engine/: CMakeLists.txt  effectcatalog.cpp  effectcatalog.h  mltengine.cpp  mltengine.h  playbackcontroller.cpp  playbackcontroller.h  renderengine.cpp  renderengine.h  tractorbuilder.cpp  tractorbuilder.h
src/ui/: CMakeLists.txt  accessibletimelineview.cpp  accessibletimelineview.h  effectsbrowser.cpp  effectsbrowser.h  exportdialog.cpp  exportdialog.h  exportprogressdialog.cpp  exportprogressdialog.h  mediabrowser.cpp  mediabrowser.h  pluginmanager.cpp  pluginmanager.h  preferencesdialog.cpp  preferencesdialog.h  propertiespanel.cpp  propertiespanel.h  shortcuteditor.cpp  shortcuteditor.h  stackmanagerdialog.cpp  stackmanagerdialog.h  thumbnailprovider.cpp  thumbnailprovider.h  timelinecanvas.cpp  timelinecanvas.h  timelinewidget.cpp  timelinewidget.h  transportbar.cpp  transportbar.h  videopreviewwidget.cpp  videopreviewwidget.h
tests/: CMakeLists.txt  test_announcer.cpp  test_clip.cpp  test_commands.cpp  test_effect.cpp  test_marker.cpp  test_project.cpp  test_serializer.cpp  test_stackregistry.cpp  test_stacktemplate.cpp  test_timecode.cpp  test_timeline.cpp  test_track.cpp  test_transition.cpp
